--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html {
 
 .third_box {
     margin-top: 117px;
-    margin-left: 695px;
+    margin-left: 670px;
     margin-bottom: 119px;
     width: 169px;
     height: 58px;
@@ -32,8 +32,24 @@ html {
     font-family: Inter;
     font-size: 36px;
     font-weight: 700;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
+.grow {
+    animation-name: grow;
+}
+
+@keyframes grow {
+    from {
+        font-size: 36px;
+    }
+
+    to {
+        font-size: 50px;
+    }
+}
 
 .qw {
     color: rgb(0, 0, 0);
@@ -218,6 +234,47 @@ html {
     height: 634px;
     border-radius: 10px;
     background: linear-gradient(180.00deg, rgb(217, 217, 217), rgb(242, 242, 242) 15.6%, rgb(233, 233, 233) 26.6%);
+}
+
+#boxy1,
+#boxy2,
+#boxy3,
+#boxy4,
+#boxy5,
+#boxy6 {
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        translate: 150vw 0;
+        scale: 200% 1;
+    }
+
+    to {
+        translate: 0 0;
+        scale: 100% 1;
+    }
+}
+
+.buttons1 {
+    display: inline-block;
+    animation-duration: 3s;
+    animation-name: growshrink;
+}
+
+@keyframes growshrink {
+
+    25%,
+    75% {
+        scale: 100%;
+    }
+
+    50% {
+        scale: 120%;
+
+    }
 }
 
 #boxy2 {
@@ -418,6 +475,20 @@ html {
     margin-left: 55px;
 }
 
+.buttons1 {
+    margin-top: 28px;
+    margin-left: 16px;
+    width: 327px;
+    height: 40px;
+    border-radius: 25px;
+    background: rgb(68, 216, 108);
+    border: none;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+}
+
 .buttons {
     margin-top: 28px;
     margin-left: 16px;
@@ -496,4 +567,408 @@ html {
     margin-top: 28px;
     background: none;
     border: none;
+}
+
+.best_choice {
+
+    width: 254px;
+    height: 58px;
+    margin-left: 660px;
+    margin-right: 540px;
+    margin-top: 170px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.button4ik {
+    border-radius: 35px;
+    background: rgb(217, 217, 217);
+    width: 600px;
+    height: 62px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    margin-left: 470px;
+    margin-top: 28px;
+}
+
+.knopo4ka {
+    margin-top: 28px;
+    margin-left: 28px;
+    width: 327px;
+    height: 40px;
+
+
+}
+
+.zberu_box {
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 57.8px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-top: 140px;
+}
+
+.knopo4ka-2 {
+    margin-top: 28px;
+    margin-left: 28px;
+    width: 327px;
+    height: 40px;
+
+
+}
+
+.button4ik-2 {
+    border-radius: 35px;
+    background: rgb(217, 217, 217);
+    width: 600px;
+    height: 62px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    margin-left: 330px;
+    margin-top: 28px;
+}
+
+.tsx-2 {
+    margin-left: 105px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 20px;
+}
+
+.tsx-1 {
+    margin-left: 200px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 20px;
+}
+
+
+
+.second_row1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 151px;
+}
+
+#box-1 {
+    width: 351px;
+    height: 410px;
+    border-radius: 12px;
+    background: linear-gradient(180.00deg, rgb(217, 217, 217), rgb(242, 242, 242) 15.6%, rgb(233, 233, 233) 26.6%);
+}
+
+#box-2 {
+    width: 351px;
+    height: 410px;
+    border-radius: 12px;
+    background: linear-gradient(180.00deg, rgb(217, 217, 217), rgb(242, 242, 242) 15.6%, rgb(233, 233, 233) 26.6%);
+}
+
+#box-3 {
+    width: 351px;
+    height: 410px;
+    border-radius: 12px;
+    background: linear-gradient(180.00deg, rgb(217, 217, 217), rgb(242, 242, 242) 15.6%, rgb(233, 233, 233) 26.6%);
+}
+
+
+
+#imge1 {
+    width: 274px;
+    height: 244px;
+    margin-left: 39px;
+    margin-top: 16px;
+}
+
+#imge2 {
+    width: 274px;
+    height: 244px;
+    margin-left: 39px;
+    margin-top: 16px;
+}
+
+#imge3 {
+    width: 274px;
+    height: 244px;
+    margin-left: 39px;
+    margin-top: 16px;
+}
+
+.buttons-1 {
+    margin-top: 5px;
+    margin-left: 56px;
+    width: 227px;
+    height: 40px;
+    border-radius: 25px;
+    background: rgb(68, 216, 108);
+    border: none;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+}
+
+.buttons-2 {
+    margin-top: 55px;
+    margin-left: 56px;
+    width: 227px;
+    height: 40px;
+    border-radius: 25px;
+    background: rgb(68, 216, 108);
+    border: none;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+}
+
+.buttons-3 {
+    margin-top: 27px;
+    margin-left: 56px;
+    width: 227px;
+    height: 40px;
+    border-radius: 25px;
+    background: rgb(68, 216, 108);
+    border: none;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+}
+
+.buttons-3:hover {
+    background-color: rgb(216, 8, 8);
+    color: black;
+    transform: scale(1.1);
+}
+
+.buttons-2:hover {
+    background-color: rgb(216, 8, 8);
+    color: black;
+    transform: scale(1.1);
+}
+
+.buttons-1:hover {
+    background-color: rgb(216, 8, 8);
+    color: black;
+    transform: scale(1.1);
+}
+
+
+
+
+
+#x-1 {
+    width: 113px;
+    height: 29px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    margin-left: 30px;
+    margin-top: 15px;
+    margin-bottom: 21px;
+}
+
+#x-11 {
+    width: 190px;
+    height: 29px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    margin-left: 30px;
+}
+
+#x-2 {
+    width: 239px;
+    height: 29px;
+    color: rgb(36, 31, 31);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    margin-left: 30px;
+    margin-top: 15px;
+    margin-bottom: 0px;
+}
+
+#x-22 {
+    position: absolute;
+    width: 154px;
+    height: 24px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    margin-left: 30px;
+}
+
+#x-3 {
+    width: 180px;
+    height: 29px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    margin-left: 30px;
+    margin-top: 15px;
+
+}
+
+#x-33 {
+    width: 170px;
+    height: 29px;
+    color: rgb(0, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    margin-left: 30px;
+
+}
+
+.button4:hover {
+    background-color: rgb(216, 8, 8);
+    color: black;
+    transform: scale(1.1);
+}
+
+.buttons:hover {
+    background-color: rgb(216, 8, 8);
+    color: black;
+    transform: scale(1.1);
+}
+
+.buttons1:hover {
+    background-color: rgb(216, 8, 8);
+    color: black;
+    transform: scale(1.1);
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(52, 168, 83);
+    width: 1519px;
+}
+
+
+#imgge-id {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 636px;
+    margin-top: 36px;
+
+}
+
+.line {
+    position: absolute;
+    width: 1139.67px;
+    height: 0;
+    left: 116px;
+
+    border: 1px solid rgb(80, 246, 124);
+    margin-top: 2px;
+}
+
+.icons {
+    margin-left: 666px;
+}
+
+.texT {
+    display: flex;
+    flex-direction: row;
+}
+
+.texT1 {
+    margin-left: 100px;
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.texT2 {
+    margin-left: 70px;
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.texT3 {
+    margin-left: 70px;
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.texT4 {
+    margin-left: 70px;
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.texT5 {
+    margin-left: 70px;
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.texT6 {
+    margin-left: 70px;
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.texT7 {
+    margin-left: 70px;
+    margin-right: 20px;
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.ttt {
+    background: linear-gradient(180.00deg, rgb(255, 255, 255));
+
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    color: aliceblue;
+}
+
+.tsx-3 {
+    margin-top: 7px;
 }
